# ghostwriter

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  PRD.md  README.md  SPECIFICATION.md  TODO.md  file-editor  go.mod
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml  rust.yml
cmd/: file-editor.go
cmd/file-editor/: main.go
crates/client/: Cargo.toml
crates/client/src/: keymap.rs  lib.rs  local.rs  main.rs  remote.rs  tui.rs
crates/client/tests/: local_loop.rs  ws_connector.rs
crates/core/: Cargo.toml
crates/core/src/: buffer.rs  debounce.rs  fs.rs  hex.rs  lib.rs  transport.rs  undo.rs  viewport.rs  wal.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: acceptor.rs  auth.rs  lib.rs  main.rs  session.rs
crates/server/tests/: ws_acceptor.rs
ghostwriter/: Cargo.toml
ghostwriter/.cargo/: config.toml
ghostwriter/src/: error.rs  lib.rs  main.rs  security.rs  state.rs
ghostwriter/src/app/: mod.rs
ghostwriter/src/cli/: mod.rs
ghostwriter/src/editor/: cursor.rs  hex_view.rs  key_handler.rs  mod.rs  rope.rs  search.rs  selection.rs  undo.rs
ghostwriter/src/files/: diff.rs  file_history.rs  file_lock.rs  file_manager.rs  file_watcher.rs  mod.rs  search.rs  workspace.rs
ghostwriter/src/network/: client.rs  internal.rs  mod.rs  protocol.rs  server.rs
ghostwriter/src/ui/: editor_widget.rs  file_picker.rs  mod.rs  status_bar.rs  terminal.rs
ghostwriter/tests/: cross_platform.rs  final_verification.rs  github.rs  integration.rs  performance.rs  security.rs  util.rs
internal/config/: config.go  config_test.go
internal/errors/: errors.go
internal/fileops/: lock.go  service.go  service_test.go
internal/filesystem/: adapter.go  adapter_test.go
internal/lock/: manager.go  manager_interface.go  manager_test.go
internal/mcp/: processor.go  processor_test.go
internal/models/: common.go  edit.go  jsonrpc.go  list.go  mcp.go  mcp_responses.go  read.go
internal/service/: service.go  service_test.go
internal/transport/: http.go  http_test.go  stdio.go  stdio_test.go
src/: cli.rs  main.rs
tests/: acceptance_pack1.rs  cli.rs
