[workspace]
members = [
    "crates/proto",
    "crates/core",
    "crates/server",
    "crates/client",
]
resolver = "2"

[workspace.package]
edition = "2024"

[package]
name = "ghostwriter"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
ghostwriter-server = { path = "crates/server" }
ghostwriter-client = { path = "crates/client" }

[profile.release]
lto = true
panic = "abort"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.1.3"
