[package]
name = "ghostwriter"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.8"
log = "0.4.27"
memmap2 = "0.9.5"
notify = "8.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.27.0"
tempfile = "3.10.1"
fs4 = "0.13.1"
futures-util = "0.3"
rand = "0.8"
regex = "1.10.3"
twoway = "0.2"
walkdir = "2.5.0"
url = "2.5.0"

[dev-dependencies]
serial_test = "3.2.0"

[lib]
path = "src/lib.rs"
