[package]
name = "ghostwriter-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
crossterm = "0.27.0"
ratatui = { version = "0.28.0", default-features = false, features = ["crossterm"] }
ghostwriter-proto = { path = "../proto" }
ghostwriter-server = { path = "../server" }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.30"
url = "2.5.4"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.10.1"
