[package]
name = "ghostwriter-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
ghostwriter-core = { path = "../core" }
ghostwriter-proto = { path = "../proto" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
argon2 = { version = "0.5", features = ["std"] }

[dev-dependencies]
tempfile = "3.10.1"
rand_core = { version = "0.6", features = ["std"] }
